# neuro-fuzzy-toolbox

./: .gitignore  .readthedocs.yaml  LICENSE  Link_Drive_Practicante.txt  README.md  pyproject.toml  requirements.txt
EXP_neuro_fuzzy_toolbox/: __init__.py
EXP_neuro_fuzzy_toolbox/evaluation/: __init__.py  evaluator.py
EXP_neuro_fuzzy_toolbox/layers/: consequent_layer.py  fuzzification_layer.py  output_layer.py
EXP_neuro_fuzzy_toolbox/models/: __init__.py  anfis.py  antecedent_block.py  deep_anfis.py
EXP_neuro_fuzzy_toolbox/training/: sonfis.py  training_algorithms.py  update_strategies.py
Experimentation and Testing/: 1-StructurePrototype_ANFIS_with_Pytorch.ipynb  2-SONFIS_operators_Prototypes_ANFIS.ipynb  2-StructurePrototype_Testing_ANFIS.ipynb  2-TrainingPrototype_ANFIS.ipynb  3-SONFIS_Prototype_and_Testing.ipynb  4-SONFIS_Problems_Resolutions.ipynb  Agua150321.xlsx  FINAL.ipynb  matlab_comparison.m  ols_comparison.m  output_comparison.m  pc_update_comparison.asv  pc_update_comparison.m  pp_update_comparison.asv  pp_update_comparison.m
anfis/: anfis.py  functions.py  layers.py  train.py  train2.py
dev_notebooks/: 0-PROTO.ipynb  1-ANFIS.ipynb  2-OLS.ipynb  3-Improvement.ipynb  4-Hybrid_learning_algorithm.ipynb
docs/: conf.py  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  usage.rst
examples/: alt_sonfis_bin_classification.ipynb  alt_sonfis_mul_classification.ipynb  alt_sonfis_regression.ipynb  h_anfis_training_bin_classification.ipynb  h_anfis_training_mul_classification.ipynb  h_anfis_training_regression.ipynb  requirements.txt  rule_reduced_sonfis_bin_cassification.ipynb  rule_reduced_sonfis_mul_classification.ipynb  rule_reduced_sonfis_regression.ipynb  sonfis_bin_classification.ipynb  sonfis_mul_classification.ipynb  sonfis_regression.ipynb
examples/ANFIS Models/: anfis_example.ipynb  anfis_example_test.ipynb  h_anfis_example.ipynb  rule_reduced_anfis_example.ipynb
examples/Hybrid Training Algorithm/: anfis_training_regression.ipynb  h_anfis_training_bin_classification.ipynb  h_anfis_training_mul_classification.ipynb  (+5 more)
neuro_fuzzy_toolbox/: __init__.py
neuro_fuzzy_toolbox_old/: __init__.py
old/anfis/: anfis.py  (+2 more)
test_notebooks/: anfis.ipynb  hybrid_learning_algorithm.ipynb  loss_functions.ipynb
test_notebooks_old/: anfis.ipynb  hybrid_learning_algorithm.ipynb  hybrid_learning_algorithm_ops.ipynb
(+164 files in other folders)
